# TradeSense

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  prices.db  requirements.txt
backend/agents/: market_intel.py
backend/api/: .env.example  __init__.py  main.py  run.py
backend/api/audit/: __init__.py  collectors.py  config.py  orchestrator.py  providers.py  reporters.py
backend/api/cli/: precompute.py
backend/api/repositories/: __init__.py  asset_repository.py  base_repository.py
backend/api/routers/: __init__.py  assets.py  audit.py  auth.py  backtest.py  broker.py  cache.py  cointegration.py  correlation.py  crypto.py  data_sync.py  market_intel.py  market_overview.py  metrics.py  news.py  pair_analysis.py  portfolio.py  screener.py  standardization.py  waitlist.py  watchlist.py  websocket.py
backend/api/services/: __init__.py  analytics_service.py  asset_service.py  auth_service.py  backtest_engine.py  backtest_service.py  binance_service.py  coinglass_service.py  cointegration_service.py  correlation_service.py  data_cache_service.py  data_quality_service.py  data_standardization_service.py  data_writer_service.py  db_health_models.py  market_overview_service.py  news_service.py  pipeline_service.py  portfolio_service.py  shared_data_utils.py  standardization_service.py  unified_ingestion_service.py  watchlist_service.py
backend/api/utils/: __init__.py  asset_universe_loader.py  assets.py  assets_config.py  auth_middleware.py  cache.py  cache_adapter.py  cache_optimizer.py  config.py  data_provider.py  datetime_normalization.py  error_handlers.py  input_validation.py  pair_validation.py  rate_limiter.py  security.py  security_headers.py  supabase_client.py
backend/clients/: base_client.py  ccxt_client.py  yfinance_client.py
config/: asset_universe_master.yaml
docker/: gunicorn.conf.py
docs/: AI_ML_ARCHITECTURE.md  ARCHITECTURE.md  DEPLOYMENT.md  SCRIPTS.md  SETUP.md
frontend-v2/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  TESTING.md  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend-v2/src/: App.tsx  index.css  vite-env.d.ts
frontend-v2/src/assets/: corr_colors.js  heatmap.css  heatmap_styles.css  styles.css  typography.css
frontend-v2/src/auth/: AuthContext.tsx
frontend-v2/src/components/: CorrelationStatsBanner.tsx  DashboardHeader.tsx  HedgeRatioCalculator.tsx  Layout.tsx  Navigation.tsx
frontend-v2/src/config/: env.ts  features.ts
frontend-v2/src/constants/: assets.ts
frontend-v2/src/hooks/: index.ts  useDebounce.ts  useIntersectionObserver.ts  useThrottle.ts  useWebSocket.ts
frontend-v2/src/pages/: BacktestPage.tsx  CointegrationPage.tsx  CorrelationPage.tsx  EducationPage.tsx  HomePage.tsx  LoginPage.tsx  MarketOverviewPage.tsx  NewsPage.tsx  OnboardingPage.tsx  PairAnalysisPage.test.tsx  PairAnalysisPage.tsx  PortfolioPage.tsx  SignUpPage.tsx  TradingCalculatorPage.tsx  TradingSignalsPage.tsx  WatchlistPage.tsx
frontend-v2/src/services/: api.ts  apiClient.ts  assets.ts  auth.ts  backtestApi.ts  cache.ts  cointegrationApi.ts  correlation.ts  marketIntel.ts  marketOverview.ts  pair.ts  rollingMetrics.ts  screener.ts  waitlist.ts  watchlist.ts
frontend-v2/src/state/: byokStore.ts  onboardingStore.ts  tickerStore.ts
frontend-v2/src/test/: setup.ts
frontend-v2/src/themes/: echarts-config.ts  echarts-dark.ts  financial-colors.ts
scripts/: README.md  bootstrap_local_data.py  populate_sqlite_metrics.py
scripts/db/: add_model_versioning.sql
scripts/pipelines/: analytics_computation_pipeline_v2.py  daily_eod_pipeline.py  populate_precomputed.py
scripts/setup/: init_db.py
tests/: README.md  UNIT_TEST_COMPLETION_SUMMARY.md  conftest.py  test_analytics_service_unit.py  test_api_schema_validation.py  test_asset_service_unit.py  test_auth_service_unit.py  test_backtest_engine_unit.py  test_backtest_router_integration.py  test_backtest_service_unit.py  test_cointegration_infinite_half_life.py  test_cointegration_service_unit.py  test_correlation_service_unit.py  test_data_alignment.py  test_data_writer_service_unit.py  test_datetime_normalization.py  test_db_schema_validation.py  test_docs_index.py  test_e2e_data_flow.py  test_hardening_core_unit.py  test_hedgevision_branch_coverage_unit.py  test_hedgevision_core_enforcement_unit.py  test_metrics_window_alignment.py  test_pipeline_service_unit.py  test_prod_validation.py  test_real_api_endpoints.py  test_real_business_engine.py  test_real_integration.py  test_rolling_metrics_alignment.py  test_rpc.py  test_statistics_verification.py  test_supabase.py  test_validate_yfinance_tickers.py
(+38 files in other folders)
